# 2GIS_Test

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp  main.h
src/ArgumentsParser/: ArgumentsParser.cpp  ArgumentsParser.h
src/FileProcessor/: FileProcessor.cpp  FileProcessor.h
